# strumok

./: .gitignore  CLAUDE.md  Makefile  README.md  dashboard-redesign.md  deploy.sh  docker-compose.yml  pyrightconfig.json
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: deployment.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py  models.py  routes_auth.py  routes_readings.py  routes_users.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/auth/: routes.py  schemas.py  service.py
backend/app/api/meter_readings/: routes.py  schemas.py  service.py
backend/app/core/: config.py  time.py
backend/app/db/: __init__.py  engine.py  models.py
backend/scripts/: calculate_meter_usage.py  import_meter_history.py
docs/: contributing.md  deployment.md
docs/claude/: commits.md
frontend/: .prettierignore  .prettierrc.json  README.md  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/favicon/: site.webmanifest
frontend/src/: App.vue  env.d.ts  main.ts  preset.ts  style.css  style.scss
frontend/src/api/: client.js
frontend/src/components/login-demos/: LoginForm.vue  LoginGlass.vue
frontend/src/features/auth/: AuthForm.vue
frontend/src/features/dashboard/: types.ts
frontend/src/features/households/: useCurrentHousehold.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/shared/: FormFieldControl.vue  Typography.vue
frontend/src/stores/: auth.js
frontend/src/views/: AdminView.vue  DashboardView.vue  LoginView.vue  RegisterView.vue
scripts/: dev.sh
(+32 files in other folders)
