[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# Build tool configuration
[tool.hatch.build.targets.wheel]
packages = ["."]

# Project metadata
[project]
name = "strumok"
version = "0.0.1"
description = "Co-op electricity meter reporting app"
requires-python = ">=3.14"
authors = [{ name = "natikos" }]
dependencies = [
  "fastapi[standard]>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.12",
  "sqlmodel>=0.0.33",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]>=3.5.0",
  "psycopg[binary]>=3.3.2",
  "email-validator>=2.2.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[project.optional-dependencies]
dev = ["ruff>=0.15.1"]
